fix_alignment

--- a/css/custom.css
+++ b/css/custom.css
@@ -2,7 +2,8 @@
     .aboutme {
         text-align: center;
     }
-    .timeline-event p {
+    .timeline-event p,
+    .why {
         text-align: justify;
     }
 }
